Fix Bazel build: all 109 tests pass (spring framework pinning, resources, test compatibility)
Agent-Logs-Url: https://github.com/kubernetes-client/java/sessions/6259bdce-a348-4232-8997-a7d4a2580b80

Co-authored-by: brendandburns <5751682+brendandburns@users.noreply.github.com>